[gd_scene load_steps=5 format=3 uid="uid://cj4v3d4jyxcth"]

[ext_resource type="Script" path="res://scenes/calculator/probability_mode.gd" id="1_md4vx"]
[ext_resource type="Texture2D" uid="uid://dlep7dm3xa58i" path="res://assets/png/background/blue.png" id="2_n4uji"]
[ext_resource type="PackedScene" uid="uid://e678hrw2246q" path="res://scenes/calculator/display.tscn" id="3_a2dfl"]
[ext_resource type="Theme" uid="uid://bcpqteq1iihn0" path="res://themes/cal_center_buttons.tres" id="7_15j5m"]

[node name="CalculatorProbability" type="Node2D"]
script = ExtResource("1_md4vx")

[node name="Background" type="Sprite2D" parent="."]
position = Vector2(963.5, 541.5)
scale = Vector2(7.60547, 4.30078)
texture = ExtResource("2_n4uji")

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="Panel" type="Panel" parent="CanvasLayer"]
offset_right = 1926.0
offset_bottom = 1100.0

[node name="Display" parent="CanvasLayer" instance=ExtResource("3_a2dfl")]
unique_name_in_owner = true

[node name="MarginContainer" type="MarginContainer" parent="CanvasLayer"]
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -548.0
offset_right = 548.0
offset_bottom = 1083.0
grow_horizontal = 2
rotation = 0.000484135
theme_override_constants/margin_top = 350

[node name="VBoxContainer" type="VBoxContainer" parent="CanvasLayer/MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 35

[node name="UpperButtonGridContainer" type="GridContainer" parent="CanvasLayer/MarginContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
theme = ExtResource("7_15j5m")
theme_override_constants/h_separation = 30
theme_override_constants/v_separation = 15
columns = 12

[node name="ButtonPower" type="Button" parent="CanvasLayer/MarginContainer/VBoxContainer/UpperButtonGridContainer" groups=["FunctionButtons"]]
layout_mode = 2
text = "POWER"

[node name="ButtonMode" type="Button" parent="CanvasLayer/MarginContainer/VBoxContainer/UpperButtonGridContainer" groups=["FunctionButtons"]]
layout_mode = 2
text = "Mode"

[node name="ButtonX" type="Button" parent="CanvasLayer/MarginContainer/VBoxContainer/UpperButtonGridContainer" groups=["OperatorButtons"]]
layout_mode = 2
text = "X"

[node name="ButtonX2" type="Button" parent="CanvasLayer/MarginContainer/VBoxContainer/UpperButtonGridContainer" groups=["FunctionButtons"]]
layout_mode = 2
text = "X"

[node name="ButtonLeft" type="Button" parent="CanvasLayer/MarginContainer/VBoxContainer/UpperButtonGridContainer" groups=["FunctionButtons"]]
layout_mode = 2
text = "←"

[node name="ButtonUp" type="Button" parent="CanvasLayer/MarginContainer/VBoxContainer/UpperButtonGridContainer" groups=["FunctionButtons", "OperatorButtons"]]
layout_mode = 2
text = "↑"

[node name="ButtonRight" type="Button" parent="CanvasLayer/MarginContainer/VBoxContainer/UpperButtonGridContainer" groups=["FunctionButtons", "OperatorButtons"]]
layout_mode = 2
text = "→"

[node name="ButtonDown" type="Button" parent="CanvasLayer/MarginContainer/VBoxContainer/UpperButtonGridContainer" groups=["FunctionButtons", "OperatorButtons"]]
layout_mode = 2
text = "↓"

[node name="ButtonX3" type="Button" parent="CanvasLayer/MarginContainer/VBoxContainer/UpperButtonGridContainer" groups=["OperatorButtons"]]
layout_mode = 2
text = "X"

[node name="ButtonX4" type="Button" parent="CanvasLayer/MarginContainer/VBoxContainer/UpperButtonGridContainer" groups=["OperatorButtons"]]
layout_mode = 2
text = "X"

[node name="ButtonX5" type="Button" parent="CanvasLayer/MarginContainer/VBoxContainer/UpperButtonGridContainer" groups=["OperatorButtons"]]
layout_mode = 2
text = "X"

[node name="ButtonBackspace" type="Button" parent="CanvasLayer/MarginContainer/VBoxContainer/UpperButtonGridContainer" groups=["FunctionButtons"]]
layout_mode = 2
text = "Backspace"

[node name="HBoxContainer" type="HBoxContainer" parent="CanvasLayer/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 100
alignment = 1

[node name="LeftButtonGridContainer" type="GridContainer" parent="CanvasLayer/MarginContainer/VBoxContainer/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
theme = ExtResource("7_15j5m")
theme_override_constants/h_separation = 30
theme_override_constants/v_separation = 15
columns = 3

[node name="ButtonMemory" type="Button" parent="CanvasLayer/MarginContainer/VBoxContainer/HBoxContainer/LeftButtonGridContainer" groups=["FunctionButtons"]]
layout_mode = 2
text = "Memory"

[node name="ButtonIndependent" type="Button" parent="CanvasLayer/MarginContainer/VBoxContainer/HBoxContainer/LeftButtonGridContainer" groups=["FunctionButtons"]]
layout_mode = 2
text = "Ind"

[node name="ButtonProbability" type="Button" parent="CanvasLayer/MarginContainer/VBoxContainer/HBoxContainer/LeftButtonGridContainer" groups=["FunctionButtons"]]
layout_mode = 2
text = "Prob"

[node name="ButtonBasic" type="Button" parent="CanvasLayer/MarginContainer/VBoxContainer/HBoxContainer/LeftButtonGridContainer" groups=["FunctionButtons"]]
layout_mode = 2
text = "Basic
"

[node name="ButtonDependent" type="Button" parent="CanvasLayer/MarginContainer/VBoxContainer/HBoxContainer/LeftButtonGridContainer" groups=["FunctionButtons"]]
layout_mode = 2
text = "Dep"

[node name="ButtonOdds" type="Button" parent="CanvasLayer/MarginContainer/VBoxContainer/HBoxContainer/LeftButtonGridContainer" groups=["FunctionButtons"]]
layout_mode = 2
text = "Odds"

[node name="ButtonCompound" type="Button" parent="CanvasLayer/MarginContainer/VBoxContainer/HBoxContainer/LeftButtonGridContainer" groups=["FunctionButtons"]]
layout_mode = 2
text = "Compound"

[node name="ButtonCompliment" type="Button" parent="CanvasLayer/MarginContainer/VBoxContainer/HBoxContainer/LeftButtonGridContainer" groups=["FunctionButtons"]]
layout_mode = 2
text = "Comp"

[node name="ButtonPercentage" type="Button" parent="CanvasLayer/MarginContainer/VBoxContainer/HBoxContainer/LeftButtonGridContainer" groups=["FunctionButtons"]]
layout_mode = 2
text = "Percent"

[node name="ButtonTime" type="Button" parent="CanvasLayer/MarginContainer/VBoxContainer/HBoxContainer/LeftButtonGridContainer" groups=["FunctionButtons"]]
layout_mode = 2
text = "Time"

[node name="ButtonConditional" type="Button" parent="CanvasLayer/MarginContainer/VBoxContainer/HBoxContainer/LeftButtonGridContainer" groups=["FunctionButtons"]]
layout_mode = 2
text = "Cond"

[node name="ButtonExpectedOccurence" type="Button" parent="CanvasLayer/MarginContainer/VBoxContainer/HBoxContainer/LeftButtonGridContainer" groups=["FunctionButtons"]]
layout_mode = 2
text = "Expect"

[node name="CentralButtonGridContainer" type="GridContainer" parent="CanvasLayer/MarginContainer/VBoxContainer/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
theme = ExtResource("7_15j5m")
theme_override_constants/h_separation = 30
theme_override_constants/v_separation = 15
columns = 5

[node name="ButtonSeven" type="Button" parent="CanvasLayer/MarginContainer/VBoxContainer/HBoxContainer/CentralButtonGridContainer" groups=["NumberButtons", "OperatorButtons"]]
layout_mode = 2
text = "7"

[node name="ButtonEight" type="Button" parent="CanvasLayer/MarginContainer/VBoxContainer/HBoxContainer/CentralButtonGridContainer" groups=["NumberButtons", "OperatorButtons"]]
layout_mode = 2
text = "8"

[node name="ButtonNine" type="Button" parent="CanvasLayer/MarginContainer/VBoxContainer/HBoxContainer/CentralButtonGridContainer" groups=["NumberButtons", "OperatorButtons"]]
layout_mode = 2
text = "9"

[node name="ButtonLeftParen" type="Button" parent="CanvasLayer/MarginContainer/VBoxContainer/HBoxContainer/CentralButtonGridContainer" groups=["OperatorButtons"]]
layout_mode = 2
text = "X"

[node name="ButtonRightParen" type="Button" parent="CanvasLayer/MarginContainer/VBoxContainer/HBoxContainer/CentralButtonGridContainer" groups=["OperatorButtons"]]
layout_mode = 2
text = "X"

[node name="ButtonFour" type="Button" parent="CanvasLayer/MarginContainer/VBoxContainer/HBoxContainer/CentralButtonGridContainer" groups=["NumberButtons", "OperatorButtons"]]
layout_mode = 2
text = "4"

[node name="ButtonFive" type="Button" parent="CanvasLayer/MarginContainer/VBoxContainer/HBoxContainer/CentralButtonGridContainer" groups=["NumberButtons", "OperatorButtons"]]
layout_mode = 2
text = "5"

[node name="ButtonSix" type="Button" parent="CanvasLayer/MarginContainer/VBoxContainer/HBoxContainer/CentralButtonGridContainer" groups=["NumberButtons", "OperatorButtons"]]
layout_mode = 2
text = "6"

[node name="ButtonMultiply" type="Button" parent="CanvasLayer/MarginContainer/VBoxContainer/HBoxContainer/CentralButtonGridContainer" groups=["OperatorButtons"]]
layout_mode = 2
text = "X"

[node name="ButtonDivide" type="Button" parent="CanvasLayer/MarginContainer/VBoxContainer/HBoxContainer/CentralButtonGridContainer" groups=["OperatorButtons"]]
layout_mode = 2
text = "X"

[node name="ButtonOne" type="Button" parent="CanvasLayer/MarginContainer/VBoxContainer/HBoxContainer/CentralButtonGridContainer" groups=["NumberButtons", "OperatorButtons"]]
layout_mode = 2
text = "1"

[node name="ButtonTwo" type="Button" parent="CanvasLayer/MarginContainer/VBoxContainer/HBoxContainer/CentralButtonGridContainer" groups=["NumberButtons", "OperatorButtons"]]
layout_mode = 2
text = "2"

[node name="ButtonThree" type="Button" parent="CanvasLayer/MarginContainer/VBoxContainer/HBoxContainer/CentralButtonGridContainer" groups=["NumberButtons", "OperatorButtons"]]
layout_mode = 2
text = "3"

[node name="ButtonAdd" type="Button" parent="CanvasLayer/MarginContainer/VBoxContainer/HBoxContainer/CentralButtonGridContainer" groups=["OperatorButtons"]]
layout_mode = 2
text = "X"

[node name="ButtonSubtract" type="Button" parent="CanvasLayer/MarginContainer/VBoxContainer/HBoxContainer/CentralButtonGridContainer" groups=["OperatorButtons"]]
layout_mode = 2
text = "X"

[node name="ButtonZero" type="Button" parent="CanvasLayer/MarginContainer/VBoxContainer/HBoxContainer/CentralButtonGridContainer" groups=["NumberButtons", "OperatorButtons"]]
layout_mode = 2
text = "0"

[node name="ButtonDecimal" type="Button" parent="CanvasLayer/MarginContainer/VBoxContainer/HBoxContainer/CentralButtonGridContainer" groups=["OperatorButtons"]]
layout_mode = 2
text = "."

[node name="ButtonPosNeg" type="Button" parent="CanvasLayer/MarginContainer/VBoxContainer/HBoxContainer/CentralButtonGridContainer" groups=["OperatorButtons"]]
layout_mode = 2
text = "(-)"
metadata/Operator = "-"

[node name="ButtonEquals" type="Button" parent="CanvasLayer/MarginContainer/VBoxContainer/HBoxContainer/CentralButtonGridContainer" groups=["FunctionButtons"]]
layout_mode = 2
text = "Next"

[node name="ButtonPercent" type="Button" parent="CanvasLayer/MarginContainer/VBoxContainer/HBoxContainer/CentralButtonGridContainer" groups=["FunctionButtons"]]
layout_mode = 2
text = "Calc"

[node name="RightButtonGridContainer" type="GridContainer" parent="CanvasLayer/MarginContainer/VBoxContainer/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
theme = ExtResource("7_15j5m")
theme_override_constants/h_separation = 30
theme_override_constants/v_separation = 15
columns = 3

[node name="ClearButton" type="Button" parent="CanvasLayer/MarginContainer/VBoxContainer/HBoxContainer/RightButtonGridContainer" groups=["FunctionButtons"]]
layout_mode = 2
text = "Clear"

[node name="ButtonDay" type="Button" parent="CanvasLayer/MarginContainer/VBoxContainer/HBoxContainer/RightButtonGridContainer" groups=["FunctionButtons"]]
layout_mode = 2
text = "Day"

[node name="Button4" type="Button" parent="CanvasLayer/MarginContainer/VBoxContainer/HBoxContainer/RightButtonGridContainer"]
layout_mode = 2
text = "e"

[node name="ButtonSecond" type="Button" parent="CanvasLayer/MarginContainer/VBoxContainer/HBoxContainer/RightButtonGridContainer" groups=["FunctionButtons"]]
layout_mode = 2
text = "Sec"

[node name="ButtonWeek" type="Button" parent="CanvasLayer/MarginContainer/VBoxContainer/HBoxContainer/RightButtonGridContainer" groups=["FunctionButtons"]]
layout_mode = 2
text = "Wk"

[node name="Button7" type="Button" parent="CanvasLayer/MarginContainer/VBoxContainer/HBoxContainer/RightButtonGridContainer"]
layout_mode = 2
text = "π"

[node name="ButtonMinute" type="Button" parent="CanvasLayer/MarginContainer/VBoxContainer/HBoxContainer/RightButtonGridContainer" groups=["FunctionButtons"]]
layout_mode = 2
text = "Min"

[node name="ButtonMonth" type="Button" parent="CanvasLayer/MarginContainer/VBoxContainer/HBoxContainer/RightButtonGridContainer" groups=["FunctionButtons"]]
layout_mode = 2
text = "Mth"

[node name="Button10" type="Button" parent="CanvasLayer/MarginContainer/VBoxContainer/HBoxContainer/RightButtonGridContainer"]
layout_mode = 2
text = "x"

[node name="ButtonHour" type="Button" parent="CanvasLayer/MarginContainer/VBoxContainer/HBoxContainer/RightButtonGridContainer" groups=["FunctionButtons"]]
layout_mode = 2
text = "Hour"

[node name="ButtonYear" type="Button" parent="CanvasLayer/MarginContainer/VBoxContainer/HBoxContainer/RightButtonGridContainer" groups=["FunctionButtons"]]
layout_mode = 2
text = "Yr"

[node name="Button2" type="Button" parent="CanvasLayer/MarginContainer/VBoxContainer/HBoxContainer/RightButtonGridContainer"]
layout_mode = 2
text = "∞"
